@@ -26,7 +26,7 @@
   * This function is the default constructor of the core skeleton instance.
   *****************************************************************************/
 
-CalCoreSkeleton::CalCoreSkeleton()
+CalCoreSkeleton::CalCoreSkeleton() : m_referenceCount(0)
 {
 }
 
@@ -291,6 +291,33 @@ void CalCoreSkeleton::scale(float factor)
     m_vectorCoreBone[*iteratorRootCoreBoneId]->scale(factor);
   }
 
+}
+
+ /*****************************************************************************/
+/** 
+  * Increment the reference counter the core skeleton.
+  *
+  *****************************************************************************/
+
+void CalCoreSkeleton::incRef()
+{
+  m_referenceCount++;
+}
+
+ /*****************************************************************************/
+/** 
+  * Decrement the reference counter the core skeleton.
+  *
+  * @return One of the following values:
+  *         \li \b true if there are nomore reference
+  *         \li \b false if there are another reference
+  *
+  *****************************************************************************/
+
+bool CalCoreSkeleton::decRef()
+{
+  m_referenceCount--;
+  return (m_referenceCount <= 0); 
 }
 
 //****************************************************************************//
